--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/react-i18next": "^8.1.0",
+    "axios": "^1.4.0",
     "i18next": "^23.4.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
